--- a/Flagrum.Web/Features/AssetExplorer/Index.razor
+++ b/Flagrum.Web/Features/AssetExplorer/Index.razor
@@ -45,7 +45,7 @@
                 {
                     <div class="row">
                         <strong class="font-display flex-grow">@AppState.Node.Name</strong>
-                        <span class="material-icons select-none cursor-pointer" style="font-size: 0.9rem" @onclick="RegenerateModal.Open">settings</span>
+                        <span class="material-icons select-none cursor-pointer" style="font-size: 0.9rem" @onclick="() => RegenerateModal?.Open()">settings</span>
                     </div>
                 }
             }
