--- a/Flagrum.Web/Features/ModLibrary/Editor/Index.razor
+++ b/Flagrum.Web/Features/ModLibrary/Editor/Index.razor
@@ -38,7 +38,7 @@
                     else
                     {
                         <div class="box row p-4 ml-3">
-                            <Button CssClass="my-1" Icon="add" Text="Create New Preset" OnClick="@(() => Navigation.NavigateTo("/mod/presets/create/0"))"/>
+                            <Button CssClass="my-1" Icon="add" Text="Create New Preset" OnClick="@(() => Navigation.NavigateTo("/mod/presets/create/0/false"))"/>
                         </div>
                     }
 
