--- a/Flagrum.Desktop/wwwroot/app.css
+++ b/Flagrum.Desktop/wwwroot/app.css
@@ -27637,7 +27637,6 @@ input:checked + .slider:before {
 }
 
 .input {
-  margin: 0px;
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
   background-color: rgba(16, 15, 12, var(--tw-bg-opacity));
@@ -27645,6 +27644,12 @@ input:checked + .slider:before {
   --tw-text-opacity: 1;
   color: rgba(168, 162, 158, var(--tw-text-opacity));
   outline: none;
+}
+
+.validation-message {
+  margin-top: 0.25rem;
+  --tw-text-opacity: 1;
+  color: rgba(126, 32, 32, var(--tw-text-opacity));
 }
 
 .min-w-400 {
